add images, events listing

--- a/index.html
+++ b/index.html
@@ -61,16 +61,30 @@
         <p>We will always bring the good vibes and fun routines, all you need to bring is an open mind for trying something new and a water bottle!</p>
 
         <div class = "photo-grid">
-            <img src = "img/comm1.jpg" alt="Bootcamp 1" class = "photo-grid-item">
-            <img src = "img/comm2.jpg" alt="Bootcamp 2" class = "photo-grid-item">
-            <img src = "img/comm3.jpg" alt="Bootcamp 3" class = "photo-grid-item">
-            <img src = "img/comm4.jpg" alt="Bootcamp 4" class = "photo-grid-item">
-            <img src = "img/comm5.jpg" alt="Bootcamp 5" class = "photo-grid-item">
+            
+            <div class = "photo-container"><p>Community Sweat</p><img src = "img/comm1.jpg" alt="Bootcamp 1" class = "photo-grid-item"></div>
+            <div class = "photo-container"><p>Booty Band</p><img src = "img/comm2.jpg" alt="Bootcamp 2" class = "photo-grid-item"></div>
+            <div class = "photo-container"><p>Beach Bootcamp</p><img src = "img/comm3.png" alt="Bootcamp 3" class = "photo-grid-item"></div>
+            <div class = "photo-container"><p>Mind, Body, Breath | Yoga</p><img src = "img/comm4.jpeg" alt="Bootcamp 4" class = "photo-grid-item"></div>
+            <div class = "photo-container"><p>Run</p><img src = "img/comm5.jpg" alt="Bootcamp 5" class = "photo-grid-item"></div>
     </section>
 
     <section id = "events">
         <h2>Events</h2>
-        <iframe id="calendar" src="https://calendar.google.com/calendar/embed?src=uhnn1n5csl5mmrjfksrvdi872g%40group.calendar.google.com&amp;ctz=America%2FHalifax" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+        <div class = "narrow">
+            <iframe id="calendar" src="https://calendar.google.com/calendar/embed?src=uhnn1n5csl5mmrjfksrvdi872g%40group.calendar.google.com&amp;ctz=America%2FHalifax" style="border: 0" width="300" height="500" frameborder="0" scrolling="no"></iframe>
+
+        </div>
+
+        <div class = "mid">
+            <iframe id="calendar" src="https://calendar.google.com/calendar/embed?src=uhnn1n5csl5mmrjfksrvdi872g%40group.calendar.google.com&amp;ctz=America%2FHalifax" style="border: 0" width="600" height="500" frameborder="0" scrolling="no"></iframe>
+        </div>
+
+        <div class = "wide">
+            <iframe id="calendar" src="https://calendar.google.com/calendar/embed?src=uhnn1n5csl5mmrjfksrvdi872g%40group.calendar.google.com&amp;ctz=America%2FHalifax" style="border: 0" width="800" height="500" frameborder="0" scrolling="no"></iframe>
+        </div>
+
     </section>
 
     <section id = "programs">
